# low-birth-weight-alert

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
data/: README.md
data/02_model_output/: best_model.pkl
data/03_reporting/: get_latex.ipynb
notebooks/: README.md  exploring_data.ipynb  running_model.ipynb
notebooks/1-data/: exploring_data.ipynb
notebooks/1-data/data/2023/: DIT_2023.csv  REC42_2023.csv  REC43_2023.csv  REC95_2023.csv
src/scripts/: getting_modules.py  merging_data.py  modeler_helper.py
