[project]
name = "LBW_Alert"
version = "0.1.0"
description = "Proyecto de clasificación para predecir la probabilidad de bajo peso en recién nacidos"
authors = [
    { name = "Pedro Casaverde" },
    { name = "Sherly Salazar" },
]
requires-python = ">=3.10"
readme = "README.md"

# --- LIBRERÍAS PRINCIPALES DEL PROYECTO ---
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",

    "scikit-learn>=1.4.2,<1.6",
    "imbalanced-learn>=0.12,<0.13",

    "lightgbm>=4.3",
    "xgboost>=2.0",

    "matplotlib>=3.8",
    "seaborn>=0.13",
    "plotly>=5.20",

    "jupyterlab>=4.3",
    "ipykernel>=6.29",
    "shap>=0.45",
    "tqdm>=4.66",
    "geopy",
]

[project.urls]
documentation = "https://PedroCasaverde.github.io/low-birth-weight-alert"
repository = "https://github.com/PedroCasaverde/low-birth-weight-alert"


[dependency-groups]
dev = [
    "pre-commit>=4.2.0", # Code linting and formatting
    "pytest>=8.3.5", # Testing framework
    "pytest-cookies>=0.7.0",
    "pytest-cov>=6.1.1",
    "cruft[pyproject]>=2.15.0",# Automated Cookiecutter template synchronization
]

#
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.49",
    "mkdocstrings[python]>=0.28.1",
    "pymdown-extensions>=10.14.3",
]
#

[tool.uv]
package = false
default-groups = [
    "dev",
#
    "docs",
#
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.paths]
source = ["src/"]

[tool.coverage.run]
source = ["src"]
omit = ["**/__init__.py"]

[tool.hatch.build.targets.wheel]
packages = ["src/low-birth-weight-alert"]