[project]
name = "LBW_Alert"
version = "0.1.0"
description = "Proyecto de clasificación para predecir la probabilidad de bajo peso en recién nacidos"
authors = [
    { name = "Pedro Casaverde" },
    { name = "Sherly Salazar" },
]
requires-python = ">=3.10"
readme = "README.md"

# --- LIBRERÍAS PRINCIPALES DEL PROYECTO ---
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "scikit-learn>=1.4.2,<1.6",
    "imbalanced-learn>=0.12,<0.13",
    "lightgbm>=4.3",
    "xgboost>=2.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "plotly>=5.20",
    "jupyterlab>=4.3",
    "ipykernel>=6.29",
    "tqdm>=4.66",
    "geopy",
    "openpyxl",
    "pdflatex",
]

[project.urls]
documentation = "https://PedroCasaverde.github.io/low-birth-weight-alert"
repository = "https://github.com/PedroCasaverde/low-birth-weight-alert"

# --- DEPENDENCIAS OPCIONALES Y DE DESARROLLO (FORMATO ESTÁNDAR) ---
[project.optional-dependencies]
dev = [
    "ruff",                 # <-- AÑADIDO: Linter y formateador
    "mypy",                 # <-- AÑADIDO: Revisor de tipos
    "pre-commit>=4.2.0",    # Code linting and formatting
    "pytest>=8.3.5",        # Testing framework
    "pytest-cookies>=0.7.0",
    "pytest-cov>=6.1.1",
    "cruft[pyproject]>=2.15.0",# Automated Cookiecutter template synchronization
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.49",
    "mkdocstrings[python]>=0.28.1",
    "pymdown-extensions>=10.14.3",
]

# --- CONFIGURACIÓN DE HERRAMIENTAS ---
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.paths]
source = ["src/"]

[tool.coverage.run]
source = ["src"]
omit = ["**/__init__.py"]

[tool.hatch.build.targets.wheel]
packages = ["src/low-birth-weight-alert"]

[tool.ruff.lint]
# Ignorar advertencias de estilo, complejidad y seguridad que no son críticas para este proyecto
ignore = [
    "PLR2004",  # Magic value used (ej. n_unique <= 9)
    "PLR0913",  # Too many arguments in function
    "PLR0915",  # Too many statements in function
    "S603",     # Subprocess call security warning
    "S607",     # Subprocess partial path warning
    "TRY300",   # Suggests moving return to an else block
    "SIM118",   # Suggests `in dict` instead of `in dict.keys()`
]